# fipy

./: .appveyor.yml  .codacy.yml  .en-custom.txt  .gitattributes  .gitignore  .htaccess  .pyspelling.yml  .travis-nix.yml  .travis.yml  CHANGELOG.rst  CREDITS.txt  INSTALLATION.rst  INSTALLATION.txt  LICENSE.rst  LICENSE.txt  MACOSX-INSTALLATION.txt  MAIL.txt  MANIFEST-UNIX.in  MANIFEST-WINDOWS.in  MANIFEST.in  README.rst  README.txt  TALKS.txt  TODOLIST.txt  Tri2DTest.py  UBUNTU-DEBIAN-INSTALLATION.txt  WINDOWS-INSTALLATION.txt  appveyor.yml  default.nix  demo.py  diff.txt  environment.yml  examples  ez_setup.py  file  flake.nix  futurize_doctests.py  futurizer.sh  gmshTest.py  grid2DTest.py  (+21 more)
.azure/: pipelines.yml
.azure/templates/: install.yml  install_bash.yml  install_linux.yml  install_ubuntu.yml
.circleci/: config.yml
.devcontainer/: devcontainer.json
.github/workflows/: Docs4NIST.yml  NISTtheDocs2Death.yml  nix.yml
FiPy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
Stokes-Non-newtonian/: FV - NonNewtonian Fluid-Part3.ipynb
Stokes-Non-newtonian/recorded-data/: m05U1resmax009.csv  m05U1resmax013.csv  m10U1resmax009.csv  m15U1resmax009.csv  m1U15resmax009.csv  m1U15resmax01.csv  m1U15resmax02.csv  m1U15resmax03.csv  m1U15resmax05.csv  mUV15U1resmax009.csv  mUV1U15resmax009.csv  mUV1U15resmax01.csv  mUV1U15resmax02.csv  mUV1U15resmax03.csv  mUV1U15resmax05.csv
_includes/: ntd2d_variants.html
_setup/: _nativize.py  build_docs.py  changelog.py  copy_script.py  efficiency_test.py  release.py  upload_products.py
_templates/: index.html
binder/: environment.yml  postBuild
commonSpotting/: INSTALLATION.txt  MANIFEST.in  setup.py
commonSpotting/documentation/: EFFICIENCY.txt
commonSpotting/fipy/: __init__.py
docs/: Makefile  environment.yml  requirements.txt
docs/source/: .gitignore  ADMINISTRATA.rst  AI_POLICY.rst  API.rst  CHANGELOG.rst  CREDITS.rst  FAQ.rst  INSTALLATION.rst  NIX-README.rst  PUBLICATIONS.rst  SOLVERS.rst  USAGE.rst  conf.py  contents.rst  design.rst  fipy.bst  glossary.rst  nist.sty  nitpick-exceptions  refs.bib
documentation/: ADMINISTRATA.rst  ADMINISTRATA.txt  API.rst  API.txt  BUILDBOT.rst  BUILDBOT.txt  CODESPEED.rst  CODESPEED.txt  CONTACT.rst  CREDITS.rst  CREDITS.txt  CVS.txt  CVSadmin.txt  DISCLAIMER.rst  EFFICIENCY.rst  EFFICIENCY.txt  ELECTROCHEM.txt  EXAMPLES.rst  FAQ.rst  FAQ.txt  GIT.rst  GIT.txt  GUIDELINES.rst  GUIDELINES.txt  INSTALLATION.rst  MAIL.rst  MAIL.txt  NIX-README.rst  PUBLICATIONS.rst  PUBLICATIONS.txt  RESOURCES.rst  SOLVERS.rst  SOLVERS.txt  SVN.txt  TODOLIST.txt  USAGE.rst  USAGE.txt  VERSION.txt  VIEWERS.rst  VIEWERS.txt  (+21 more)
documentation/_static/: fipy.bib  fipy.ris  residuals.csv  solver_convergence.csv
documentation/_templates/: example.rst  index.html  indexcontent.html  indexsidebar.html  layout.html
documentation/examples/: README.rst
documentation/logo/: logo.tex
documentation/manual/: epydoc.sty  faq.tex  fipy.bst  fipy.cls  fipy.dbj  fipy.sty  fipy.tex  howtoread.tex  introduction.tex  reference.tex  refs.bib  tocvsec2.sty
documentation/numerical/: discret.rst  discret.tex  discret.txt  equation.rst  equation.tex  equation.txt  index.rst  index.txt  numerical.txt  scheme.rst  scheme.txt
documentation/pyplots/: cpus_vs_threads.py  scaling.csv  scaling.py  threadanalyze.csv  threadanalyze.py  threading.csv
documentation/sphinxext/: docscrape.py  docscrape_sphinx.py  example.py  generate_modules.py  numpydoc.py  redirecting_html.py
documentation/tutorial/: index.rst  index.txt
documentation/www/: ctcms.css  default.css  extra.html  head.html  index.html  menu.html  meta.html  tail.html
en/1094-unknown-instruction-load_fast_load_fast-with-scipy/: .buildinfo  ADMINISTRATA.html  API.html  CHANGELOG.html  CONTACT.html  CREDITS.html  DISCLAIMER.html  EFFICIENCY.html  EXAMPLES.html  FAQ.html  GIT.html  GUIDELINES.html  INSTALLATION.html  LICENSE.html  NIX-README.html  PUBLICATIONS.html  README.html  SOLVERS.html  (+16 more)
environments/: README.rst  base-environment.yml  conda-petsc-lock.yml  conda-pysparse-lock.yml  conda-trilinos-lock.yml  environment.yml  petsc-environment.yml  petsc27-environment.yml  pysparse-environment.yml  scipy-environment.yml  trilinos-environment.yml
examples/: README.rst  README.txt  __init__.py  index.ipynb  parallel.py  sanitize.cfg  test.py  update0_1to1_0.py  update1_0to2_0.py
fipy/: __init__.py  _version.py  requirements.txt  test.py  testFiPy.py
mayavi/: MANIFEST-WINDOWS.in
nix/: README.md  README.rst  build.nix  gmsh.nix  nixpkgs_version.nix  py2.nix  py3.nix  pysparse.nix  skfmm.nix
utils/: include.txt  includedHTMLWriter.py  includedLaTeXWriter.py
(+4099 files in other folders)
