[build-system]
requires = ["setuptools", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "FiPy"
authors = [
  { name="Jonathan Guyer" },
  { name="Daniel Wheeler" },
  { name="Jim Warren" },
]
description = "A finite volume PDE solver in Python"
readme = "README.rst"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "typer",
]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: X11 Applications",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# These fields aren't supported by python < 3.9
# license = "NIST-Software"
# license-files = ["LICEN[CS]E*"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/usnistgov/fipy"
Issues = "https://github.com/usnistgov/fipy/issues"

[tool.setuptools.packages.find]
include = ["fipy*"]  # ["*"] by default

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "fipy/_version.py"
versionfile_build = "fipy/_version.py"
tag_prefix = ""
parentdir_prefix = ""

[project.scripts]
"fipy_changelog" = "fipy.tools.changelog:app"
"fipy_copy_script" = "fipy.tools.copy_script:app"
"fipy_test" = "fipy.tests.test:app"
"versioneer" = "versioneer:main"

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
