[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "FiPy"
authors = [
  { name="Jonathan Guyer" },
  { name="Daniel Wheeler" },
  { name="Jim Warren" },
]
description = "A finite volume PDE solver in Python"
readme = "README.rst"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "typer",
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: X11 Applications",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
license = "NIST-Software"
license-files = ["LICEN[CS]E*"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/usnistgov/fipy"
Issues = "https://github.com/usnistgov/fipy/issues"

[tool.setuptools.packages.find]
include = ["fipy*"]  # ["*"] by default

[project.scripts]
"fipy_changelog" = "fipy.tools.changelog:app"
"fipy_copy_script" = "fipy.tools.copy_script:app"
"fipy_test" = "fipy.tests.test:app"

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
